[gd_scene load_steps=16 format=3 uid="uid://epl84qsgrxb0"]

[ext_resource type="Texture2D" uid="uid://byeakwy7ldxh8" path="res://assets/dog head bite/0000.png" id="1_g0aey"]
[ext_resource type="Script" path="res://scripts/dog_bite.gd" id="1_gvo48"]
[ext_resource type="Texture2D" uid="uid://csc3ftq38eny0" path="res://assets/dog head bite/0001.png" id="2_7p6e6"]
[ext_resource type="Texture2D" uid="uid://bilfcfdfphwv1" path="res://assets/dog head bite/0002.png" id="3_0gb4x"]
[ext_resource type="Texture2D" uid="uid://d130vhayudify" path="res://assets/dog head bite/0003.png" id="4_qusax"]
[ext_resource type="Texture2D" uid="uid://ce5xrby0mhjvt" path="res://assets/dog head bite/0004.png" id="5_tqwg7"]
[ext_resource type="Texture2D" uid="uid://buq15r2bpmps2" path="res://assets/dog head bite/0005.png" id="6_ebtcg"]
[ext_resource type="Texture2D" uid="uid://dbcwupkurk25y" path="res://assets/dog head bite/0006.png" id="7_068kk"]
[ext_resource type="Texture2D" uid="uid://dphop0fr85we8" path="res://assets/dog head bite/0007.png" id="8_t64ba"]
[ext_resource type="Texture2D" uid="uid://d1h7mfpb4e5od" path="res://assets/dog head bite/0008.png" id="9_l7aqm"]
[ext_resource type="Texture2D" uid="uid://cflgnuwk18cq1" path="res://assets/dog head bite/0009.png" id="10_pidjr"]
[ext_resource type="Texture2D" uid="uid://bghc5sqj2w1ev" path="res://assets/dog head bite/0010.png" id="11_iupg5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_clc22"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_g0aey")
}, {
"duration": 1.0,
"texture": ExtResource("2_7p6e6")
}, {
"duration": 1.0,
"texture": ExtResource("3_0gb4x")
}, {
"duration": 1.0,
"texture": ExtResource("4_qusax")
}, {
"duration": 1.0,
"texture": ExtResource("5_tqwg7")
}, {
"duration": 1.0,
"texture": ExtResource("6_ebtcg")
}, {
"duration": 1.0,
"texture": ExtResource("7_068kk")
}, {
"duration": 1.0,
"texture": ExtResource("8_t64ba")
}, {
"duration": 1.0,
"texture": ExtResource("9_l7aqm")
}, {
"duration": 1.0,
"texture": ExtResource("10_pidjr")
}, {
"duration": 1.0,
"texture": ExtResource("11_iupg5")
}],
"loop": false,
"name": &"bite",
"speed": 24.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_etfsf"]
radius = 41.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wqvwv"]
radius = 21.0238

[node name="DogBite" type="Area2D"]
position = Vector2(-14, 0)
script = ExtResource("1_gvo48")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_clc22")
animation = &"bite"
frame = 10
frame_progress = 1.0

[node name="BigBite" type="CollisionShape2D" parent="."]
position = Vector2(90, 11)
shape = SubResource("CircleShape2D_etfsf")
disabled = true

[node name="SmallBite" type="CollisionShape2D" parent="."]
position = Vector2(47, 13)
shape = SubResource("CircleShape2D_wqvwv")
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
